[package]
name = "json-schm-wasm"
version = "0.2.0"
authors = ["nschwarz <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"
description = "JSON schema validation with wasm"
repository = "https://github.com/chiefbiiko/json-schm-wasm.git"
license = "MIT"

[lib]
crate-type = ['cdylib']

[dependencies]
wasm-bindgen = "0.2.50"
serde_json = "1.0.40"
jsonschema-valid = { path = "./jsonschema-valid/" }
